--- a/movie.ipynb
+++ b/movie.ipynb
@@ -2,98 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "14e65625",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tensorflow-recommenders in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.7.3)\n",
-      "Requirement already satisfied: absl-py>=0.1.6 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-recommenders) (2.2.2)\n",
-      "Requirement already satisfied: tensorflow>=2.9.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-recommenders) (2.19.0)\n",
-      "Requirement already satisfied: astunparse>=1.6.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (1.6.3)\n",
-      "Requirement already satisfied: flatbuffers>=24.3.25 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (25.2.10)\n",
-      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (0.6.0)\n",
-      "Requirement already satisfied: google-pasta>=0.1.1 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (0.2.0)\n",
-      "Requirement already satisfied: libclang>=13.0.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (18.1.1)\n",
-      "Requirement already satisfied: opt-einsum>=2.3.2 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (3.4.0)\n",
-      "Requirement already satisfied: packaging in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (25.0)\n",
-      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0dev,>=3.20.3 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (4.25.8)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (2.32.3)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (80.8.0)\n",
-      "Requirement already satisfied: six>=1.12.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (1.17.0)\n",
-      "Requirement already satisfied: termcolor>=1.1.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (3.1.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (4.13.2)\n",
-      "Requirement already satisfied: wrapt>=1.11.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (1.17.2)\n",
-      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (1.71.0)\n",
-      "Requirement already satisfied: tensorboard~=2.19.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (2.19.0)\n",
-      "Requirement already satisfied: keras>=3.5.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (3.10.0)\n",
-      "Requirement already satisfied: numpy<2.2.0,>=1.26.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (1.26.4)\n",
-      "Requirement already satisfied: h5py>=3.11.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (3.13.0)\n",
-      "Requirement already satisfied: ml-dtypes<1.0.0,>=0.5.1 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow>=2.9.0->tensorflow-recommenders) (0.5.1)\n",
-      "Requirement already satisfied: wheel<1.0,>=0.23.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from astunparse>=1.6.0->tensorflow>=2.9.0->tensorflow-recommenders) (0.45.1)\n",
-      "Requirement already satisfied: rich in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from keras>=3.5.0->tensorflow>=2.9.0->tensorflow-recommenders) (14.0.0)\n",
-      "Requirement already satisfied: namex in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from keras>=3.5.0->tensorflow>=2.9.0->tensorflow-recommenders) (0.0.9)\n",
-      "Requirement already satisfied: optree in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from keras>=3.5.0->tensorflow>=2.9.0->tensorflow-recommenders) (0.15.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow>=2.9.0->tensorflow-recommenders) (3.4.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow>=2.9.0->tensorflow-recommenders) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow>=2.9.0->tensorflow-recommenders) (2.2.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow>=2.9.0->tensorflow-recommenders) (2025.4.26)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorboard~=2.19.0->tensorflow>=2.9.0->tensorflow-recommenders) (3.8)\n",
-      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorboard~=2.19.0->tensorflow>=2.9.0->tensorflow-recommenders) (0.7.2)\n",
-      "Requirement already satisfied: werkzeug>=1.0.1 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorboard~=2.19.0->tensorflow>=2.9.0->tensorflow-recommenders) (3.1.3)\n",
-      "Requirement already satisfied: MarkupSafe>=2.1.1 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from werkzeug>=1.0.1->tensorboard~=2.19.0->tensorflow>=2.9.0->tensorflow-recommenders) (3.0.2)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from rich->keras>=3.5.0->tensorflow>=2.9.0->tensorflow-recommenders) (3.0.0)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from rich->keras>=3.5.0->tensorflow>=2.9.0->tensorflow-recommenders) (2.19.1)\n",
-      "Requirement already satisfied: mdurl~=0.1 in c:\\users\\muhammad_talha\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow>=2.9.0->tensorflow-recommenders) (0.1.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.3.1 -> 25.1.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install tensorflow-recommenders\n",
-    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import tensorflow as tf\n",
     "import tensorflow_recommenders as tfrs\n",
     "import tensorflow_datasets as tfds\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from typing import Dict, Text\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "from zipfile import ZipFile\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.layers import Embedding\n",
+    "from tensorflow.keras.utils import get_file\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "d4b9fbc7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading MovieLens 100k dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Loading MovieLens 100k dataset...\")\n",
-    "ratings = tfds.load(\"movielens/100k-ratings\", split=\"train\")\n",
-    "movies = tfds.load(\"movielens/100k-movies\", split=\"train\")"
+    "# --- Load Dataset ---\n",
+    "cols = ['userId', 'movieId', 'rating', 'timestamp']\n",
+    "movies = tfds.load(\"movielens/100k-movies\", split=\"train\")\n",
+    "movies_df = tfds.as_dataframe(movies)"
    ]
   },
   {
@@ -670,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
