--- a/movie.ipynb
+++ b/movie.ipynb
@@ -269,8 +269,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1edef138",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1682"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "num_movies = len(movie2movie_encoded)\n",
+    "num_movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3405176a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "943"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_users = len(user2user_encoded)\n",
+    "num_users\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cc55e292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalize ratings\n",
+    "min_rating, max_rating = df['rating'].min(), df['rating'].max()\n",
+    "df['rating'] = df['rating'].apply(lambda x: (x - min_rating) / (max_rating - min_rating))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89b052cc",
    "metadata": {},
    "outputs": [],
    "source": []
