--- a/movie.ipynb
+++ b/movie.ipynb
@@ -326,8 +326,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "89b052cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Train-test Split ---\n",
+    "X = df[['user', 'movie']].values\n",
+    "y = df['rating'].values\n",
+    "x_train, x_val, y_train, y_val = train_test_split(X, y, test_size=0.1, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1a09e17e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Define Model ---\n",
+    "class RecommenderNet(tf.keras.Model):\n",
+    "    def __init__(self, num_users, num_movies, embedding_size=50):\n",
+    "        super().__init__()\n",
+    "        self.user_embedding = Embedding(num_users, embedding_size)\n",
+    "        self.movie_embedding = Embedding(num_movies, embedding_size)\n",
+    "        self.user_bias = Embedding(num_users, 1)\n",
+    "        self.movie_bias = Embedding(num_movies, 1)\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        user_vec = self.user_embedding(inputs[:, 0])\n",
+    "        movie_vec = self.movie_embedding(inputs[:, 1])\n",
+    "        user_bias = self.user_bias(inputs[:, 0])\n",
+    "        movie_bias = self.movie_bias(inputs[:, 1])\n",
+    "        dot = tf.tensordot(user_vec, movie_vec, 2)\n",
+    "        return tf.nn.sigmoid(dot + user_bias + movie_bias)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1ef9e1f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RecommenderNet(num_users, num_movies, embedding_size=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f019fb1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='mse', optimizer=tf.keras.optimizers.Adam(learning_rate=0.001))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a7344beb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    loss='binary_crossentropy',\n",
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "    metrics=['accuracy', tf.keras.metrics.Precision(), tf.keras.metrics.Recall()]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f65da54",
    "metadata": {},
    "outputs": [],
    "source": []
