--- a/movie.ipynb
+++ b/movie.ipynb
@@ -398,8 +398,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5f65da54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 4ms/step - accuracy: 0.2007 - loss: 0.6623 - precision: 0.9463 - recall: 0.8723 - val_accuracy: 0.2211 - val_loss: 0.6280 - val_precision: 0.9479 - val_recall: 0.9717\n",
+      "Epoch 2/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 6ms/step - accuracy: 0.2284 - loss: 0.6234 - precision: 0.9554 - recall: 0.9461 - val_accuracy: 0.2333 - val_loss: 0.6193 - val_precision: 0.9619 - val_recall: 0.8735\n",
+      "Epoch 3/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 6ms/step - accuracy: 0.2359 - loss: 0.6156 - precision: 0.9653 - recall: 0.8810 - val_accuracy: 0.2343 - val_loss: 0.6168 - val_precision: 0.9646 - val_recall: 0.8395\n",
+      "Epoch 4/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 5ms/step - accuracy: 0.2388 - loss: 0.6135 - precision: 0.9665 - recall: 0.8451 - val_accuracy: 0.2346 - val_loss: 0.6163 - val_precision: 0.9653 - val_recall: 0.8144\n",
+      "Epoch 5/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 3ms/step - accuracy: 0.2393 - loss: 0.6116 - precision: 0.9701 - recall: 0.8284 - val_accuracy: 0.2356 - val_loss: 0.6142 - val_precision: 0.9672 - val_recall: 0.7993\n",
+      "Epoch 6/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 4ms/step - accuracy: 0.2420 - loss: 0.6101 - precision: 0.9715 - recall: 0.8219 - val_accuracy: 0.2371 - val_loss: 0.6140 - val_precision: 0.9684 - val_recall: 0.7950\n",
+      "Epoch 7/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 4ms/step - accuracy: 0.2423 - loss: 0.6102 - precision: 0.9727 - recall: 0.8127 - val_accuracy: 0.2365 - val_loss: 0.6130 - val_precision: 0.9694 - val_recall: 0.7934\n",
+      "Epoch 8/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.2409 - loss: 0.6121 - precision: 0.9716 - recall: 0.8125 - val_accuracy: 0.2381 - val_loss: 0.6125 - val_precision: 0.9709 - val_recall: 0.7902\n",
+      "Epoch 9/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 4ms/step - accuracy: 0.2431 - loss: 0.6109 - precision: 0.9730 - recall: 0.8104 - val_accuracy: 0.2368 - val_loss: 0.6136 - val_precision: 0.9697 - val_recall: 0.7853\n",
+      "Epoch 10/10\n",
+      "\u001b[1m2813/2813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 4ms/step - accuracy: 0.2425 - loss: 0.6110 - precision: 0.9723 - recall: 0.8131 - val_accuracy: 0.2379 - val_loss: 0.6142 - val_precision: 0.9707 - val_recall: 0.7820\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(\n",
+    "    x=x_train,\n",
+    "    y=y_train,\n",
+    "    batch_size=32,\n",
+    "    epochs=10,\n",
+    "    verbose=1,\n",
+    "    validation_data=(x_val, y_val),)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76f9e91c",
    "metadata": {},
    "outputs": [],
    "source": []
