--- a/movie.ipynb
+++ b/movie.ipynb
@@ -441,8 +441,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "76f9e91c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n",
+      "Precision: 0.65\n",
+      "Recall: 0.89\n",
+      "Accuracy: 0.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score\n",
+    "\n",
+    "# Predict probabilities\n",
+    "y_pred_probs = model.predict(x_val)\n",
+    "\n",
+    "# Convert probabilities to binary (0 or 1)\n",
+    "y_pred = (y_pred_probs > 0.5).astype(int)\n",
+    "\n",
+    "# Convert y_val to binary if it's not already\n",
+    "y_val_binary = (y_val > 0.5).astype(int)\n",
+    "\n",
+    "# Now compute metrics\n",
+    "precision = precision_score(y_val_binary, y_pred)\n",
+    "recall = recall_score(y_val_binary, y_pred)\n",
+    "accuracy = accuracy_score(y_val_binary, y_pred)\n",
+    "\n",
+    "print(f\"Precision: {precision:.2f}\")\n",
+    "print(f\"Recall: {recall:.2f}\")\n",
+    "print(f\"Accuracy: {accuracy:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7ee823f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m49/49\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Recommendation for a Random User ---\n",
+    "user_id = df['userId'].sample(1).iloc[0]\n",
+    "movies_watched = df[df.userId == user_id]\n",
+    "not_watched = df[~df['movieId'].isin(movies_watched.movieId.values)]['movieId'].unique()\n",
+    "not_watched = [[movie2movie_encoded.get(x)] for x in not_watched if x in movie2movie_encoded]\n",
+    "user_encoded = user2user_encoded.get(user_id)\n",
+    "user_movie_array = np.hstack(([[user_encoded]] * len(not_watched), not_watched))\n",
+    "ratings = model.predict(user_movie_array).flatten()\n",
+    "top_indices = ratings.argsort()[-10:][::-1]\n",
+    "recommended_movie_ids = [list(movie2movie_encoded.keys())[list(movie2movie_encoded.values()).index(not_watched[x][0])] for x in top_indices]\n",
+    "recommended_movies = movies_df[movies_df['movieId'].isin(recommended_movie_ids)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7512df28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 Recommendations:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_title</th>\n",
+       "      <th>genre_names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>High Noon (1952)</td>\n",
+       "      <td>[Unknown]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>Dr. Strangelove or: How I Learned to Stop Worr...</td>\n",
+       "      <td>[Thriller, Unknown]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>Titanic (1997)</td>\n",
+       "      <td>[Action, Drama, Sci-Fi]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>635</th>\n",
+       "      <td>Third Man, The (1949)</td>\n",
+       "      <td>[Romance, War]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>652</th>\n",
+       "      <td>One Flew Over the Cuckoo's Nest (1975)</td>\n",
+       "      <td>[Drama]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1072</th>\n",
+       "      <td>Schindler's List (1993)</td>\n",
+       "      <td>[Drama, Unknown]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1142</th>\n",
+       "      <td>Citizen Kane (1941)</td>\n",
+       "      <td>[Drama]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1194</th>\n",
+       "      <td>Manchurian Candidate, The (1962)</td>\n",
+       "      <td>[Film-Noir, War]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1411</th>\n",
+       "      <td>Paradise Lost: The Child Murders at Robin Hood...</td>\n",
+       "      <td>[Documentary]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1479</th>\n",
+       "      <td>Shawshank Redemption, The (1994)</td>\n",
+       "      <td>[Drama]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            movie_title  \\\n",
+       "170                                    High Noon (1952)   \n",
+       "274   Dr. Strangelove or: How I Learned to Stop Worr...   \n",
+       "609                                      Titanic (1997)   \n",
+       "635                               Third Man, The (1949)   \n",
+       "652              One Flew Over the Cuckoo's Nest (1975)   \n",
+       "1072                            Schindler's List (1993)   \n",
+       "1142                                Citizen Kane (1941)   \n",
+       "1194                   Manchurian Candidate, The (1962)   \n",
+       "1411  Paradise Lost: The Child Murders at Robin Hood...   \n",
+       "1479                   Shawshank Redemption, The (1994)   \n",
+       "\n",
+       "                  genre_names  \n",
+       "170                 [Unknown]  \n",
+       "274       [Thriller, Unknown]  \n",
+       "609   [Action, Drama, Sci-Fi]  \n",
+       "635            [Romance, War]  \n",
+       "652                   [Drama]  \n",
+       "1072         [Drama, Unknown]  \n",
+       "1142                  [Drama]  \n",
+       "1194         [Film-Noir, War]  \n",
+       "1411            [Documentary]  \n",
+       "1479                  [Drama]  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Top 10 Recommendations:\")\n",
+    "recommended_movies[['movie_title', 'genre_names']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de668061",
    "metadata": {},
    "outputs": [],
    "source": []
